[gd_scene load_steps=22 format=3 uid="uid://bqscglixmr4bd"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/editor.gd" id="1"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/graph.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bnlg07ckbg0w" path="res://addons/dialogue_nodes/icons/Back.svg" id="3"]
[ext_resource type="PackedScene" path="res://addons/dialogue_nodes/nodes/StartNode.tscn" id="3_kc00i"]
[ext_resource type="Texture2D" uid="uid://cc1ufhyvste6m" path="res://addons/dialogue_nodes/icons/Forward.svg" id="4"]
[ext_resource type="PackedScene" uid="uid://b60fa8vcjuoo6" path="res://addons/dialogue_nodes/nodes/DialogueNode.tscn" id="4_byype"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/dialogueBox.gd" id="5"]
[ext_resource type="PackedScene" path="res://addons/dialogue_nodes/nodes/SignalNode.tscn" id="5_6axxc"]
[ext_resource type="PackedScene" uid="uid://3ofh51q0vhmg" path="res://addons/dialogue_nodes/nodes/ConditionNode.tscn" id="6_rpnyg"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/workspace.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://dsllcvm7vi10m" path="res://addons/dialogue_nodes/nodes/SetNode.tscn" id="7_yjl7f"]
[ext_resource type="PackedScene" uid="uid://h3hkys0mgvji" path="res://addons/dialogue_nodes/nodes/CommentNode.tscn" id="8_nuo3d"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/files.gd" id="9"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/variables.gd" id="10"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/characters.gd" id="10_cxec0"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="11_ku5xd"]
[ext_resource type="Texture2D" uid="uid://buayifvickq2l" path="res://addons/dialogue_nodes/icons/Folder.svg" id="12_tk1td"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="15_kpna5"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="19_7vkda"]

[sub_resource type="RichTextEffect" id="RichTextEffect_orqxx"]
script = ExtResource("15_kpna5")

[sub_resource type="RichTextEffect" id="RichTextEffect_ynero"]
script = ExtResource("19_7vkda")

[node name="NodeEditor" type="Control"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -4.0
size_flags_vertical = 3

[node name="ToolBar" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="Main/ToolBar"]
layout_mode = 2
keep_pressed_outside = true
text = "File"
switch_on_hover = true
item_count = 8
popup/item_0/text = "New Tree"
popup/item_0/id = 0
popup/item_1/text = "Open..."
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 6
popup/item_2/separator = true
popup/item_3/text = "Save"
popup/item_3/id = 2
popup/item_4/text = "Save As"
popup/item_4/id = 3
popup/item_5/text = ""
popup/item_5/id = 7
popup/item_5/separator = true
popup/item_6/text = "Close"
popup/item_6/id = 4
popup/item_7/text = "Close All"
popup/item_7/id = 5

[node name="AddMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
layout_mode = 2
keep_pressed_outside = true
text = "Add Node"
switch_on_hover = true
item_count = 6
popup/item_0/text = "StartNode"
popup/item_0/id = 0
popup/item_1/text = "DialogueNode"
popup/item_1/id = 1
popup/item_2/text = "CommentNode"
popup/item_2/id = 2
popup/item_3/text = "SignalNode"
popup/item_3/id = 3
popup/item_4/text = "SetNode"
popup/item_4/id = 4
popup/item_5/text = "ConditionNode"
popup/item_5/id = 5

[node name="RunMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
layout_mode = 2
keep_pressed_outside = true
text = "Run"
switch_on_hover = true

[node name="DebugMenu" type="MenuButton" parent="Main/ToolBar"]
layout_mode = 2
focus_mode = 2
keep_pressed_outside = true
text = "Debug"
switch_on_hover = true
item_count = 1
popup/item_0/text = "Print Debug Messages"
popup/item_0/checkable = 1
popup/item_0/id = 0

[node name="Workspace" type="HSplitContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7")
nodeScenes = Array[PackedScene]([ExtResource("3_kc00i"), ExtResource("4_byype"), ExtResource("8_nuo3d"), ExtResource("5_6axxc"), ExtResource("7_yjl7f"), ExtResource("6_rpnyg")])

[node name="SidePanel" type="VSplitContainer" parent="Main/Workspace"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Files" type="ItemList" parent="Main/Workspace/SidePanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
script = ExtResource("9")
editor_path = NodePath("../../../..")
newDialogue_path = NodePath("../../../../NewDialog")
saveDialogue_path = NodePath("../../../../SaveDialog")
openDialogue_path = NodePath("../../../../OpenDialog")
confirmDialogue_path = NodePath("../../../../ConfirmationDialog")

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/SidePanel/Files"]
item_count = 4
item_0/text = "Save"
item_0/id = 0
item_1/text = "Save As"
item_1/id = 1
item_2/text = "Close"
item_2/id = 2
item_3/text = "Close All"
item_3/id = 3

[node name="Data" type="VBoxContainer" parent="Main/Workspace/SidePanel"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Characters" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data"]
layout_mode = 2
script = ExtResource("10_cxec0")

[node name="Title" type="Label" parent="Main/Workspace/SidePanel/Data/Characters"]
layout_mode = 2
text = "Characters"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Workspace/SidePanel/Data/Characters"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="ResetButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
layout_mode = 2
icon = ExtResource("11_ku5xd")
flat = true

[node name="FilePath" type="TextEdit" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_tk1td")

[node name="OpenDialog" type="FileDialog" parent="Main/Workspace/SidePanel/Data/Characters"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres; Character resource")

[node name="Variables" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data"]
layout_mode = 2
script = ExtResource("10")

[node name="Title" type="Label" parent="Main/Workspace/SidePanel/Data/Variables"]
layout_mode = 2
text = "Variables"

[node name="AddButton" type="Button" parent="Main/Workspace/SidePanel/Data/Variables"]
layout_mode = 2
tooltip_text = "Add a new variable."
text = "+"

[node name="Graph" type="GraphEdit" parent="Main/Workspace"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
zoom_min = 0.5
zoom_max = 2.0
script = ExtResource("2")

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/Graph"]
item_count = 6
item_0/text = "StartNode"
item_0/id = 0
item_1/text = "DialogueNode"
item_1/id = 1
item_2/text = "CommentNode"
item_2/id = 2
item_3/text = "SignalNode"
item_3/id = 3
item_4/text = "SetNode"
item_4/id = 4
item_5/text = "ConditionNode"
item_5/id = 5

[node name="Statusbar" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="PanelToggle" type="TextureButton" parent="Main/Statusbar"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
stretch_mode = 3

[node name="NewDialog" type="FileDialog" parent="."]
title = "Create a file"
size = Vector2i(600, 400)
mode_overrides_title = false
filters = PackedStringArray("*.tres; Dialogue File")

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save a file"
size = Vector2i(600, 400)
mode_overrides_title = false
filters = PackedStringArray("*.tres; Dialogue File")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a file"
size = Vector2i(600, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.tres; Dialogue File")

[node name="ConfirmationDialog" type="AcceptDialog" parent="."]
size = Vector2i(400, 109)
dialog_text = "The file/s contains unsaved changes. Are you sure you want to close the file/s?"
dialog_autowrap = true

[node name="DialogBackground" type="Panel" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.501961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueBox" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -128.0
offset_right = 320.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_orqxx"), SubResource("RichTextEffect_ynero")])

[connection signal="about_to_popup" from="Main/ToolBar/RunMenu" to="." method="_update_run_menu"]
[connection signal="node_added" from="Main/Workspace" to="." method="_on_node_added"]
[connection signal="node_deleted" from="Main/Workspace" to="." method="_on_node_deleted"]
[connection signal="closed" from="Main/Workspace/SidePanel/Files" to="." method="_on_file_closed"]
[connection signal="closed" from="Main/Workspace/SidePanel/Files" to="Main/Workspace" method="_on_file_closed"]
[connection signal="empty_clicked" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_empty_clicked"]
[connection signal="item_clicked" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_item_clicked"]
[connection signal="item_selected" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="select_file"]
[connection signal="opened" from="Main/Workspace/SidePanel/Files" to="." method="_on_file_opened"]
[connection signal="switched" from="Main/Workspace/SidePanel/Files" to="." method="open_data"]
[connection signal="id_pressed" from="Main/Workspace/SidePanel/Files/PopupMenu" to="." method="_on_file_popup_pressed"]
[connection signal="modified" from="Main/Workspace/SidePanel/Data/Characters" to="Main/Workspace" method="_on_file_modified"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/ResetButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_resetButton_pressed"]
[connection signal="text_changed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/FilePath" to="Main/Workspace/SidePanel/Data/Characters" method="_on_filePath_changed"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/LoadButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_loadButton_pressed"]
[connection signal="file_selected" from="Main/Workspace/SidePanel/Data/Characters/OpenDialog" to="Main/Workspace/SidePanel/Data/Characters" method="load_file"]
[connection signal="modified" from="Main/Workspace/SidePanel/Data/Variables" to="Main/Workspace" method="_on_file_modified"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Variables/AddButton" to="Main/Workspace/SidePanel/Data/Variables" method="add_variable"]
[connection signal="connection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_request"]
[connection signal="connection_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="connection_to_empty" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_connection_to_empty"]
[connection signal="delete_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_delete"]
[connection signal="delete_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="disconnection_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_disconnection_request"]
[connection signal="disconnection_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="duplicate_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_nodes_duplicated"]
[connection signal="duplicate_nodes_request" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="end_node_move" from="Main/Workspace/Graph" to="Main/Workspace/Graph" method="_on_modified"]
[connection signal="modified" from="Main/Workspace/Graph" to="Main/Workspace" method="_on_file_modified"]
[connection signal="popup_request" from="Main/Workspace/Graph" to="Main/Workspace" method="show_menu"]
[connection signal="visibility_changed" from="Main/Workspace/Graph" to="." method="_on_graph_visibility_changed"]
[connection signal="id_pressed" from="Main/Workspace/Graph/PopupMenu" to="Main/Workspace" method="add_node"]
[connection signal="pressed" from="Main/Statusbar/PanelToggle" to="." method="toggle_side_panel"]
[connection signal="file_selected" from="NewDialog" to="." method="new_file"]
[connection signal="file_selected" from="SaveDialog" to="." method="save_file"]
[connection signal="file_selected" from="OpenDialog" to="." method="open_file"]
[connection signal="custom_action" from="ConfirmationDialog" to="Main/Workspace/SidePanel/Files" method="_on_confirmDialog_action"]
[connection signal="gui_input" from="DialogBackground" to="." method="_on_dialog_background_input"]
